Text overflow fix for organization description

--- a/ckan/public/base/less/profile.less
+++ b/ckan/public/base/less/profile.less
@@ -25,6 +25,9 @@
 			display: block;
 		}
 	}
+	p {
+		overflow: auto;
+	}
 	code {
 		font-weight: normal;
 		padding: 0;
